--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TashHost.App"
+﻿<Application x:Class="Aspenlaub.Net.GitHub.CSharp.TashHost.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="TashHostWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
