--- a/src/TashHostWindow.xaml
+++ b/src/TashHostWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Loaded="LoustWindow_OnLoadedAsync" Closing="Window_Closing"
-        Title="Tash Host" Height="450" Width="800" Background="Silver">
+        Loaded="LoustWindow_OnLoadedAsync" Closing="Window_Closing" Icon="tashhost.ico"
+        Title="Tash Host" Height="300" Width="450" Background="Silver">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
