--- a/src/TashHostWindow.xaml
+++ b/src/TashHostWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Loaded="LoustWindow_OnLoadedAsync" Closing="Window_Closing" Icon="tashhost.ico"
+        Loaded="OnLoustWindowLoadedAsync" Closing="OnWindowClosingAsync" Icon="tashhost.ico"
         Title="Tash Host" Height="300" Width="450" Background="Silver">
     <Grid>
         <Grid.RowDefinitions>
@@ -20,6 +20,6 @@
         <Label Grid.Column="0" Grid.Row="0" Margin="10,5,0,0">Tash ⮀</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Padding="2,3,2,3" Margin="10,5,0,0" Name="StatusConfirmedAt" IsReadOnly="True" Width="70" Background="Silver" />
         <TextBox Name="MonitorBox" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Margin="10" Padding="5" Background="Black" Foreground="Silver" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="3" Grid.Row="0" Name="CloseButton" Margin="0,10,10,0" Padding="10,0,10,0" Background="Black" Foreground="Silver" Click="CloseButton_OnClick">_Close</Button>
+        <Button Grid.Column="3" Grid.Row="0" Name="CloseButton" Margin="0,10,10,0" Padding="10,0,10,0" Background="Black" Foreground="Silver" Click="OnCloseButtonClickAsync">_Close</Button>
     </Grid>
 </Window>
